--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=Manrope:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=Barlow:wght@100;200;300;400;500;600;700&display=swap');
 
 // Tipografías
 $font-primary: 'Cormorant Garamond', serif;
-$font-secondary: 'Manrope', sans-serif;
+$font-secondary: 'Barlow', sans-serif;
 
 // Colores base
 $body-bg: #EDE3D6; // Fondo base claro
@@ -20,3 +20,6 @@ $link-color: $primary;
 $link-hover-color: darken($primary, 10%);
 $btn-border-radius: 0.5rem;
 $btn-font-weight: 500;
+
+
+
