--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,18 +1,26 @@
 body {
     font-family: $font-secondary;
     color: var(--color-text); 
-    font-size: 16px;
+    
     line-height: 1.6;
+
+  font-weight: 300;
+  font-size: 0.9rem;
+  
+
+ 
   }
   
-  h1, h2, h3, h4, h5, h6 {
+  h1, h2 {
     font-family: $font-primary;
-    font-weight: 600;
-    line-height: 1.3;
-    margin-bottom: 1rem;
+    font-weight: 700;
+    
+  }
+
+   h3, h4, h5, h6 {
+    font-family: $font-secondary;
+    font-weight: 300;
+    
   }
   
-  p {
-    margin-bottom: 1rem;
-  }
   
