--- a/src/scss/sections/_services.scss
+++ b/src/scss/sections/_services.scss
@@ -1,22 +1,16 @@
 #services {
-    background-color: $light; // #EDE3D6
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-  
+    background-color: #f7f5f5;//$light; // #EDE3D6
+    
     .container.text-center {
       margin-bottom: 3rem;
   
-      h2 {
-        font-family: $font-primary;
+      h3 {
         color: $dark; // #4D2E1E
-        font-weight: 700;
         margin-bottom: 0.5rem;
       }
   
       p.lead {
-        font-family: $font-secondary;
-        color: darken($body-color, 15%);
-        font-weight: 400;
+        color: darken($body-color, 15%);        
       }
     }
   
@@ -33,8 +27,6 @@
       }
   
       h3 {
-        font-family: $font-primary;
-        font-weight: 600;
         color: $primary; // #811433
         margin-bottom: 1rem;
       }
@@ -51,12 +43,12 @@
         li {
           font-family: $font-secondary;
           font-size: 1rem;
-          color: $dark;
+        //  color: $dark;
           opacity: 0.85;
           margin-bottom: 0.75rem;
   
           span.text-primary {
-            color: $primary;
+            color: white;
             font-size: 1.2rem;
             margin-right: 0.5rem;
             display: flex;
