--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -12,11 +12,11 @@
   }
 
   .z-1 {
-    z-index: 1;
+    z-index: 3;
   }
 
   /* Overlay oscuro semitransparente para mejorar contraste */
-  &::before {
+  /*&::before {
     content: "";
     position: absolute;
     inset: 0;
@@ -26,9 +26,9 @@
 
   > .container {
     position: relative;
-    z-index: 2;
+    z-index: 10;
     text-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
-  }
+  }*/
 
   h1,
   p {
