--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -2,7 +2,7 @@
 $footer-bg-color: #222222;
 $footer-text-color: #cccccc;
 $footer-link-color: #ffffff;
-$footer-link-hover-color: #007bff;
+$footer-link-hover-color: $primary;
 $footer-overlay-color: rgba(0, 0, 0, 0.7);
 $footer-border-color: #444444;
 $footer-title-color: #ffffff;
