--- a/src/scss/sections/_contact.scss
+++ b/src/scss/sections/_contact.scss
@@ -22,6 +22,7 @@
       @extend .rounded-circle;
       @extend .border;
       @extend .border-white;      
+      font-size: 0.9rem
     }
     .content {
       @extend .ps-3;
