--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,19 +1,21 @@
+
 .navbar {
   position: fixed;
   width: 100%;
   background: transparent;
   transition: background-color 0.3s ease, box-shadow 0.3s ease;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-    .logo-color {
-      @extend .d-block;
-    }
+  
+  .logo-color {
+    @extend .d-block;
+  }
 
-    .logo-white {
-      @extend .d-none;
-    }
+  .logo-white {
+    @extend .d-none;
+  }
 
   &.scrolled {
-    background-color: #fff!important;
+    background-color: #fff !important;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 
@@ -22,11 +24,11 @@
       color: #000 !important;
     }
 
-   .navbar-toggler{
-    background-color: $primary
-   }
-    
-  .logo-color {
+    .navbar-toggler {
+      background-color: $primary;
+    }
+
+    .logo-color {
       @extend .d-none;
     }
 
@@ -44,8 +46,6 @@
 .navbar .btn {
   padding: 0.5rem 1.25rem;
   border-radius: 4px;
-  
-  font-size: 0.9rem;
   transition: background-color 0.3s ease, color 0.3s ease;
 
   &.btn-primary {
