--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -1,4 +1,3 @@
-
 .hero-section {
   position: relative;
   min-height: 100vh;
@@ -15,7 +14,6 @@
     z-index: 3;
   }
 
-  
   &::before {
     content: "";
     position: absolute;
@@ -35,15 +33,9 @@
     text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   }
 
- p {
-    font-weight: 100!important;
-  }
-  
-
-  .btn-primary,
-  .btn-outline-light {
-    border-radius: 4px;
-  font-size: 0.9rem;  
+  p {
+    font-weight: 100 !important;
+    @extend .fs-2;
   }
 
   .btn-primary {
@@ -59,7 +51,6 @@
   .btn-outline-light {
     color: $light;
     border-color: $light;
-
     &:hover {
       background-color: $light;
       color: $dark;
@@ -67,21 +58,18 @@
   }
 }
 
- @media (min-width: 768px) {
-  
-    .hero-zoom {
-  animation: heroZoomIn 10s ease-out forwards;
-  background-size: 105%;
+@media (min-width: 768px) {
+  .hero-zoom {
+    animation: heroZoomIn 10s ease-out forwards;
+    background-size: 105%;
 
-  @keyframes heroZoomIn {
-    0% {
-      background-size: 110%;
-    }
-    100% {
-      background-size: 100%;
+    @keyframes heroZoomIn {
+      0% {
+        background-size: 110%;
+      }
+      100% {
+        background-size: 100%;
+      }
     }
   }
 }
-
-
-  }
